fix projects on mobile

--- a/portfolio/static/style.css
+++ b/portfolio/static/style.css
@@ -262,6 +262,7 @@ a:hover {
     background-color: var(--primary-color);
     text-decoration: none;
     transition: background-color 0.2s, border-color 0.2s;
+    margin-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) {
